# ghc-typelits-gcd

./: README.md  ghc-typelits-gcd.cabal
src/GHC/TypeLits/: GCD.hs
src/GHC/TypeLits/GCD/: Solver.hs
test/: ErrorSpec.hs  Spec.hs
