name:                ghc-typelits-gcd
version:             0.1
synopsis:            Type-level GCD operation
description:         Type-level GCD operation, and type-checker plugin
homepage:            http://github.com/christiaanb/ghc-typelits-gcd
license:             BSD2
license-file:        LICENSE
author:              Christiaan Baaij
maintainer:          christiaan.baaij@gmail.com
copyright:           Copyright © 2016 Christiaan Baaij
category:            Type System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GHC.TypeLits.GCD
                       GHC.TypeLits.GCD.Solver
  build-depends:       base >= 4.7 && < 5,
                       ghc >= 7.10.1,
                       ghc-tcplugins-extra >= 0.2
  default-language:    Haskell2010

test-suite ghc-typelits-gcd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  Other-Modules:       ErrorSpec
  build-depends:       base,
                       ghc-typelits-gcd,
                       tasty       >= 0.10,
                       tasty-hunit >= 0.9
  ghc-options:         -O0 -dcore-lint -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
